--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,5 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
 
 set(CONFIGURATIONS Debug Release)
 foreach(CONFIG ${CONFIGURATIONS})
-    file(COPY live_driving.yml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CONFIG})
+    file(COPY live_driving.yaml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CONFIG})
 endforeach()
