--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE src)
 target_link_libraries(${PROJECT_NAME} PRIVATE safetyhook::safetyhook spdlog::spdlog CURL::libcurl rapidjson cryptopp::cryptopp yaml-cpp::yaml-cpp)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
 
-set(CONFIGURATIONS Debug Release)
-foreach(CONFIG ${CONFIGURATIONS})
-    file(COPY live_driving.yaml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CONFIG})
-endforeach()
+file(COPY live_driving.yaml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE})
