--- a/live_driving.yaml
+++ b/live_driving.yaml
@@ -1,6 +1,7 @@
 obs_url: "ws://localhost:4455"
 obs_password: "password"
 debug: true
+use_rtti: true
 scene_map:
   1: "IIDX"
   default: "IIDX no cam"
