--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,14 @@
-# Copyright (c) 2021-2022-2023-2024 Luca Cappa
-# Released under the term specified in file LICENSE.txt
-# SPDX short identifier: MIT
-#
-# The peculiarity of this workflow is that assumes vcpkg stored as a submodule of this repository.
-# The workflow runs on x64 and ARM platforms.
-# Workflow steps:
-# - Setup vcpkg and cache it on the GitHub Action cloud based cache.
-# - Runs CMake with CMakePreset.json using a presest configuration
-#   that leverages the vcpkg's toolchain file. This will automatically run vcpkg 
-#   to install dependencies described by the vcpkg.json manifest file. 
-#   This stage also runs vcpkg with Binary Caching leveraging GitHub Action cache to 
-#   store the built packages artifacts, hence it will be a no-op if those are restored 
-#   from cache (e.g., already previously built).
-# - Finally builds the sources with Ninja, and tests as well.
-name: hosted-ninja-vcpkg_submod-autocache
+name: build
 on:
   push:
-    pull_request:
     branches:
       - master
   workflow_dispatch:
 
 jobs:
   job:
-    name: ${{ matrix.os }}-${{ github.workflow }}
-    runs-on: ${{ matrix.os }}
+    name: Build project
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
@@ -33,24 +17,20 @@ jobs:
       VCPKG_DEFAULT_TRIPLET: x64-windows-static
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - uses: lukka/get-cmake@latest
+      - name: Get CMake
+        uses: lukka/get-cmake@latest
 
-      - name: Restore from cache and setup vcpkg executable and data files.
+      - name: Run vcpkg
         uses: lukka/run-vcpkg@v11
         with:
           vcpkgJsonGlob: 'vcpkg.json'
 
-      # Note: if the preset misses the "configuration", it is possible to explicitly select the
-      # configuration with the additional `--config` flag, e.g.:
-      #   buildPreset: 'ninja-vcpkg'
-      #   buildPresetAdditionalArgs: "[`--config`, `Release`]"
-      #   testPreset: 'ninja-vcpkg'
-      #   testPresetAdditionalArgs: "[`--config`, `Release`]"
-      - name: Run CMake+vcpkg+Ninja+CTest to build packages and generate/build/test the code.
+      - name: Run CMake
         uses: lukka/run-cmake@v10
         with:
           configurePreset: 'ninja-multi-config'
